cd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-quarkus-k8s
  labels:
    app: ex-quarkus
    modulo: alunos
spec:
  selector:
    matchLabels:
      app: microservico-alunos
  replicas: 1
  template:
    metadata:
      labels:
        app: microservico-alunos
    spec:
      containers:
        - name: apm-quarkus-k8s
          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          image: harbor.intra.rs.gov.br/procergs-apm/apm-quarkus-k8s:%Version%
          ports:
            - name: web
              containerPort: 8080
