cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-quarkus-k8s
spec:
  selector:
    app: microservico-alunos
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
